# nanoclaw

./: .gitignore  CLAUDE.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.claude/skills/add-agent/: SKILL.md
.claude/skills/add-api/: SKILL.md
.claude/skills/add-chatwoot/: SKILL.md
.claude/skills/add-discord/: SKILL.md
.claude/skills/add-edge/: SKILL.md
.claude/skills/add-entry-point/: SKILL.md
.claude/skills/add-gmail/: SKILL.md
.claude/skills/add-hooks/: SKILL.md
.claude/skills/add-memory/: SKILL.md
.claude/skills/add-node/: SKILL.md
.claude/skills/add-observability/: SKILL.md
.claude/skills/add-sandbox/: SKILL.md
.claude/skills/add-scheduler/: SKILL.md
.claude/skills/add-state-field/: SKILL.md
.claude/skills/add-subgraph/: SKILL.md
scripts/: generate-resolutions.ts  run-ci-tests.ts  run-migrations.ts
skills-engine/: apply.ts  constants.ts  index.ts  init.ts  migrate.ts  rebase.ts  replay.ts  resolution-cache.ts  state.ts  structured.ts  types.ts  uninstall.ts  update.ts
skills-engine/__tests__/: apply.test.ts  backup.test.ts  constants.test.ts  customize.test.ts  fetch-upstream.test.ts  lock.test.ts  manifest.test.ts  path-remap.test.ts  rebase.test.ts  replay.test.ts  resolution-cache.test.ts  run-migrations.test.ts  state.test.ts  structured-python.test.ts  test-helpers.ts  uninstall.test.ts  update-core-cli.test.ts  update.test.ts
templates/base/: .env.example  .gitignore  Dockerfile  graph.py  langgraph.json  main.py  pyproject.toml  state.py
templates/base/config/: settings.py
(+20 files in other folders)
